# Python-Projects

./: .gitignore  README.md  _config.yml
Crypto-Price/: GetData.py  README.md  app.py  requirements.txt  setup.cfg  setup.py
Crypto-Price/crypto-price/: GetData.py  __main__.py
Cybersec/: arp_spoof.py  netscan.py  packet_sniffer.py
DBS-Project/: databaseHandler.py  main.py
DBS-Project/guiStuff/: __init__.py  frameStuff.py
GUI-Calculator/: GUI_Calculator.py
Reddit_bot/: README.md  barney_bot.py  praw.ini  reddit_bot.py  reply_post.py
_layouts/: default.html
