[metadata]
name = crypto-price
version = 0.0.1

[options]
script_name = crpyrice
packages = crypto-price

install_requires = 
    art==5.2
    certifi==2021.5.30
    chardet==4.0.0
    colorama==0.4.4
    idna==2.10
    requests==2.25.1
    urllib3==1.26.5

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

include_package_data = True